<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Resuelvo Explorando</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_task">Resuelvo Explorando</string>
    <string name="title_activity_show_map">Resuelvo Explorando</string>
    <string name="backToTasksButton">ver lista de actividades</string>
    <string name="imageMapDesc">Mapa</string>
    <string name="welcome_text">Bienvenidos a la actividad Resuelvo Explorando!</string>
    <string name="activity_objective">Objetivo de la Actividad</string>
    <string name="start_activity">¡A explorar!</string>
    <string name="title_activity_read_task">Resuelvo Explorando</string>
    <string name="read_indicated_task">En el mapa se les muestra el lugar donde deberán ir para continuar con la actividad.</string>
    <string name="scan">Leer Código</string>
    <string name="title_activity_show__deposits">Resuelvo Explorando</string>
    <string name="title_activity_end_task">Resuelvo Explorando</string>
    <string name="title_activity_show_deposit">Resuelvo explorando</string>
    <string name="title_activity_scanner_emulator">Resuelvo explorando</string>
    <string name="title_activity_show_bag">Resuelvo explorando</string>
    <string name="title_activity_return_task_elements">Resuelvo explorando</string>
    <string name="title_activity_show_users_evaluation">Resuelvo explorando</string>
    <string name="evaluation_message">Sus resultados fueron</string>
    <string name="evaluationReturnButton">Volver</string>
    <string name="title_activity_end_deposit">Resuelvo explorando</string>
    <string name="title_activity_end_game">Resuelvo explorando</string>
    <string name="title_activity_evaluation_list">Resuelvo explorando</string>
    <string name="evaluation_list_message">Elijan la evaluación que desean ver</string>
    <string name="evaluationListTitle">Desempeño del Grupo en la actividad</string>
    <string name="evaluationSubtitle">Seleccione el desempeño a ver:</string>
    <string name="evaluationTasksTitle">En tareas</string>
    <string name="evaluationDepositsTitle">Al depositar</string>
    <string name="all_elements_have_been_deposited_go_to_next_task">Ya han depositado todos los elementos recolectados, ahora podrán ir a la siguiente tarea.</string>
    <string name="deposit_or_go_to_next_task">Ahora deberán decidir entre ir a depositar los elementos recolectados o ir a la siguiente tarea.</string>
    <string name="keep_depositing_or_go_to_next_task">Ahora deberán elegir entre seguir depositando elementos recolectados o ir a la siguiente tarea</string>
    <string name="keep_depositing_or_end_game">Ahora deberán elegir entre depositar los elementos recolectados o finalizar la actividad.</string>
    <string name="go_to_next_task">Ir a la Siguiente Tarea</string>
    <string name="end_game">Finalizar actividad</string>
    <string name="no_element_has_been_deposited">No han depositado ningún elemento.</string>
    <string name="no_more_tasks_keep_depositing_or_end_game">Ya no tienen tareas para realizar, deberán elegir entre seguir depositando elementos recolectados o finalizar la actividad.</string>
    <string name="bag_is_not_empty">Aún tienen elementos en la bolsa. ¿Están seguros de querer finalizar la actividad? En caso de responder que No, se les dará la opción de seguir depositando elementos.</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="invalid_code">Código Inválido.</string>
    <string name="sorry_invalid_code">¡Lo siento! El código que leyeron no es el adecuado. En el mapa les mostramos donde deberán ir.</string>
    <string name="you_finished_all_tasks">¡Han finalizado todas las tareas propuestas!</string>
    <string name="you_finished_task">¡Han finalizado la tarea!</string>
    <string name="you_deposited_selected_elements">¡Han depositado los elementos seleccionados!</string>
    <string name="go_to_poi_and_read_code">Una vez que lleguen al lugar indicado, deberán leer el código.</string>
    <string name="keep_depositing">Seguir Depositando</string>
    <string name="what_do_you_choose">¿Qué eligen?</string>
    <string name="congratulations_text">¡Felicitaciones!\n Han finalizado la actividad.</string>
    <string name="check_performance_or_end_game">Ahora deberán elegir entre ver su desempeño en la actividad o salir del mismo.</string>
    <string name="check_performance">Ver Desempeño</string>
    <string name="exit_game">Salir de la actividad</string>
    <string name="exit_game_confirmation_text">¿Están seguros de querer salir de la actividad? En caso de responder que Si, no podrán volver a ver su desempeño en el mismo."</string>
    <string name="where_do_you_want_to_go">¿A dónde quieren ir?</string>
    <string name="read_code_is_invalid">El código leido es inválido.</string>
    <string name="ok">OK</string>
    <string name="to_deposit">A Depositar</string>
    <string name="aiuda">Ayuda</string>
    <string name="masInfoPls">Más Info.</string>
    <string name="correct_elements">Elementos correctos</string>
    <string name="incorrect_elements">Elementos incorrectos</string>
    <string name="missing_elements">Elementos faltantes</string>
    <string name="element">Elemento </string>

    <string name="no_elements_selected_to_return">No han seleccionado elementos para devolver.</string>
    <string name="return_elements">Devolver Elementos</string>
    <string name="collected_elements_for_this_task">Se les muestran los elementos recolectados para la tarea:</string>
    <string name="task">Tarea</string>
    <string name="select_elements_to_return">Seleccionen los elementos a devolver:</string>
    <string name="return_selected_elements">Devolver Elementos Seleccionados</string>
    <string name="not_return_elements">No Devolver Elementos</string>
    <string name="you_have_not_collected_elements_yet">Aún no han recolectado elementos.</string>
    <string name="collected_elements_for_each_task">Para cada tarea recibida se muestran los elementos recolectados.</string>
    <string name="go_back">Volver</string>
    <string name="no_selected_elements_to_deposit">No han seleccionado elementos para depositar.</string>
    <string name="deposit_elements">Depositar Elementos</string>
    <string name="deposit_of">Depósito de</string>
    <string name="select_elements_to_deposit">Ahora deberán seleccionar todos los elementos de su bolsa que decidan depositar aquí</string>
    <string name="elements_in_bag">Elementos en la bolsa:</string>
    <string name="not_deposit_elements">No Depositar Elementos</string>
    <string name="invalid_element">El elemento leído es inválido</string>
    <string name="my_bag">Mi bolsa</string>
    <string name="collect_element">Recolectar Elemento</string>
    <string name="collected_for_this_task">Recolectaron para esta tarea:</string>
    <string name="return_plain">Devolver</string>
    <string name="end_task">Terminar Tarea</string>
    <string name="deposit">Depósito</string>
    <string name="performance_in_deposit">Desempeño en el depósito:</string>

    <string name="end_task_without_elements">Ahora deberán ir a la siguiente tarea</string>
    <string name="end_tasks_without_elements">Ahora deberán finalizar la actividad</string>
    <string name="you_finished_task_without_elements">Han finalizado la tarea sin recolectar elementos</string>
    <string name="you_finished_last_task_without_elements">Han finalizado la última tarea sin recolectar elementos.</string>
    <string name="title_activity_scanner">Scanner</string>
    <!-- 	<string name=""></string> -->
    <!-- 	<string name=""></string> -->

    <string name="BienvenidaTítulo">Bienvenidos al tutorial de "Resuelvo Explorando"</string>
    <string name="BienvenidaDescripcion">Aquí les mostraremos algunas de las características tecnológicas y de uso para realizar esta actividad</string>
    <string name="MapaTitulo">Visualizarán el lugar hacia donde dirigirse para realizar la siguiente tarea</string>
    <string name="MapaDescripcion">A lo largo de la actividad se mostrarán mapas donde se señalará hacia donde deberán ir para realizar la siguiente tarea</string>
    <string name="LeerTareaTitulo">Recibirán la consigna de una tarea</string>
    <string name="LeerTareaDescripcion">Al llegar al lugar indicado de la tarea a realizar, deberán leer el código QR de la tarea para recibir su consigna</string>
    <string name="MasInfoTitulo">"Más Info"</string>
    <string name="MasInfoDescripcion">Al seleccionar "Más Info" podrán obtener material adicional de la actividad en general o de la tarea en particular. El enunciado completo de una tarea también se visualizará con esta opción</string>
    <string name="MiBolsaTitulo">"Mi Bolsa"</string>
    <string name="MiBolsaDescripcion">Esta opción les permite visualizar los elementos recolectados hasta el momento en las diferentes tareas realizadas</string>
    <string name="AyudaTitulo">"Ayuda"</string>
    <string name="AyudaDescripcion">Al seleccionar la opción "Ayuda", podrán solicitar ayuda del docente: ya sea porque no comprenden una tarea o por cualquier eventualidad que así lo requiera</string>
    <string name="RecolectarElementoTitulo">Recolectarán elementos</string>
    <string name="RecolectarElementoDescripcion">Cuando se encuentren realizando una tarea que pida recolectar elementos, deberán seleccionar de a uno los elementos que responden a la consigna recibida y "leer su código QR". Al hacerlo el elemento se sumará a una lista y se guardará en una bolsa virtual</string>
    <string name="DepositarElementosTitulo">Depositarán elementos</string>
    <string name="DepositarElementoDescripcion">Cuando se encuentren realizando una tarea que pida depositar elementos deberán seleccionarlos de la lista que se visualiza y elegir la opción de depositar</string>
    <string name="VerDesempeñoPorTareaTitulo">Podrán ver su desempeño en una tarea</string>
    <string name="VerDesempeñoPorTareaDescripcion">Luego de finalizar cada tarea es posible visualizar su desempeño en la misma</string>
    <string name="VerDesempeñoTitulo">Podrán ver su desempeño general</string>
    <string name="VerDesempeñoDescripcion">Luego de finalizar toda la actividad, es posible visualizar el desempeño en cada una de las tareas realizadas, tanto de recolección como aquellas en las que depositaron elementos</string>
    <string name="Facultad">UNLP - Facultad de Informática - LIFIA y CICPBA</string>

</resources>
