<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E6EEFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/collected_elements_for_this_task"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/taskText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/task"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="22dp" >

        <TextView
            android:id="@+id/evaluationSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/select_elements_to_return"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        android:layout_weight="0.57"
        android:background="@drawable/rounded_corner"
        android:padding="5dp" >

        <ListView
            android:id="@+id/listOfElementsForThisTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fadeScrollbars="false"
            android:textSize="18sp" >
        </ListView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp">
            <Button
                android:layout_weight="1"
                android:id="@+id/returnElements"
                style="@style/button_text_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_button"
                android:onClick="returnElements"
                android:text="@string/return_elements" />
        <Button
            android:layout_weight="1"
            android:id="@+id/Button01"
            style="@style/button_text_small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:onClick="goBack"
            android:text="@string/not_return_elements" />
        </LinearLayout>

</LinearLayout>