<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6EEFF"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/botonesFondoL"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/congratulationsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/congratulations_text"
                android:textAlignment="gravity"
                android:textColor="#111111"
                android:textSize="25sp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/evaluationSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:text="@string/check_performance_or_end_game"
                        android:textColor="#111111"
                        android:textSize="20sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:src="@drawable/question_mark" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_marginTop="37dp"
                android:gravity="center"
                android:text="@string/what_do_you_choose"
                android:textColor="#111111"
                android:textSize="25sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botonesFondoL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showUsersEvaluation"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:onClick="showUsersEvaluations"
            android:text="@string/check_performance" />

        <Button
            android:id="@+id/endGameButton"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:onClick="closeGame"
            android:text="@string/exit_game" />


    </LinearLayout>

</RelativeLayout>